# agentguard

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  STATE.md  alembic.ini  docker-compose.demo.yml  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  task.yml
.github/actions/agentguard/: action.yml
.github/scripts/: check-commit-msg.sh  check-conventional-commits.sh  pre-push-guard.sh
.github/workflows/: auto-merge.yml  ci.yml  migration-test.yml  publish-cli.yml  release.yml  security.yml
cli/: README.md  pyproject.toml
cli/src/agentguard_cli/: commands.py
cli/src/agentguard_core/: __init__.py
docker/initdb/: 01-app-role.sql
docs/: api-reference.md  authentication.md  billing-model.md  branch-protection.md  deployment-gate.md  deployment.md  development-guide.md  getting-started.md  pilot-workflow.md  production-readiness.md  pypi-cli-release-architecture.md  quickstart.md  security.md  tenant-provisioning.md  troubleshooting.md
docs/architecture/: adr-0008-evaluation-engine.md  adr-0009-real-model-evaluation.md  adr-0010-model-provider-abstraction.md  adr-0011-failure-scenario-library.md  adr-0012-policy-engine.md  adr-0013-deployment-gate.md  adr-0013-saas-architecture.md  adr-0014-productization.md  be-02-agent-registry.md  production-deployment.md
docs/customer/: onboarding.md
docs/deployment/: cloudflare-edge.md
docs/development/: merge-policy.md
docs/plans/: local-scan-engine-design.md  phase1-key-scope-hardening-spec.md  phase1-observability-plan.md  phase1-s7-production-readiness.md  q3-execution-roadmap.md
docs/product/: agentguard-landing-page-design-spec.md
docs/releases/: beta-checklist.md
docs/reviews/: 2026-07-founder-review.md
docs/security/: ci-automation-review.md
edge-worker/: package.json  wrangler.toml
edge-worker/src/: index.js
infrastructure/terraform/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  providers.tf  variables.tf
migrations/: env.py
migrations/versions/: 0001_init.py  0002_agent_registry.py  0003_evaluation_engine.py  0004_scenario_provenance.py  0005_policy_engine.py  0006_production_hardening.py  0007_saas_readiness.py  0008_org_lifecycle.py  0009_rbac_scoped_keys.py  0010_audit_request_id.py
reports/: 2026-07-16-eval01.md  2026-07-16-eval02.md  2026-07-16-phase3.md  2026-07-16.md  2026-07-17-phase4.md  2026-07-17-phase5.md  2026-07-17-phase6.md
reports/usage/: 2026-07.md
scripts/: apply-branch-protection.sh  demo-cloud.sh  demo.sh  record-usage.sh
src/agentguard_cli/: __init__.py  api.py  commands.py  main.py  report.py  sarif.py
src/keel/: audit.py  config.py  context.py  db.py  deps.py  errors.py  fingerprint.py  logging.py  main.py  metrics.py  middleware.py  models.py  net.py  provisioning.py  rate_limit.py  roles.py  schemas.py  security.py  signing.py
src/keel/api/: agents.py  audit.py  dashboard.py  evals.py  health.py  lookups.py  orgs.py  policies.py  policy_service.py  projects.py
src/keel/api/templates/: dashboard.html
src/keel/evals/: __init__.py  checks.py  engine.py  library.py  live.py  risk.py  runner.py  taxonomy.py
src/keel/evals/providers/: __init__.py  base.py  vertex.py
src/keel/policy/: __init__.py  compiler.py  resolver.py  rules.py
src/worker/: main.py
tests/: conftest.py  test_api_errors.py  test_api_key_schema.py  test_audit_coverage.py  test_auto_merge_guard.py  test_cli.py  test_cli_core_no_drift.py  test_cli_init.py  test_cli_workflow.py  test_client_ip.py  test_dashboard.py  test_edge_gateway.py  test_errors.py  test_fingerprint.py  test_gate_blocks_dangerous_agent.py  test_health.py  test_health_endpoints.py  test_isolation.py  test_library.py  test_migrations.py  test_observability.py  test_packaging.py  test_policy.py  test_policy_api.py  test_provisioning.py  test_rate_limiting.py  test_rbac.py  test_report.py  test_risk.py  test_roles.py  test_saas_readiness.py  test_scenario_library.py  test_security.py  test_security_audit.py  test_signing.py  test_tenant_isolation.py  test_vertex_live.py  test_vertex_provider.py
