[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keel-platform"
version = "0.0.1"
description = "AgentGuard / Keel — AI agent reliability platform (control plane + workers)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["keel", "keel.api", "worker"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
# S101: asserts are fine in tests
per-file-ignores = { "tests/*" = ["S101"] }

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
ignore_missing_imports = true

# redis-py responses are dynamically typed; relax strict call/return checks in the worker only.
[[tool.mypy.overrides]]
module = "worker.*"
disallow_untyped_calls = false
warn_return_any = false
