[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "agentguard"
version = "0.1.0"
description = "The security gate for AI agents before they touch production."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "AgentGuard Team", email = "security@agentguard.ai" }
]
keywords = ["ai-security", "llm-security", "prompt-injection", "agent-evaluation", "ci-security-gate"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Software Development :: Testing",
]
# The published `agentguard` package is the developer CLI (adr-0013). It talks to the API
# over HTTP and computes fingerprints locally with the stdlib, so httpx is its only runtime
# dependency. The FastAPI control plane + worker are NOT pip-installed — they ship as a
# Docker image built from this same repo (see Dockerfile / release.yml). Their dependencies
# live in the `server` extra below purely as documentation; installing the wheel must never
# pull the backend stack. Verified by tests/test_packaging.py.
dependencies = [
    "httpx>=0.27",
]

[project.urls]
Homepage = "https://agentguard.ai"
Documentation = "https://agentguard.ai/docs"
Repository = "https://github.com/Nagamiji/agentguard"
Issues = "https://github.com/Nagamiji/agentguard/issues"

[project.scripts]
# The deployment-gate CLI (Phase 5). Installed with the package; the GitHub Action runs it.
agentguard = "agentguard_cli.main:main"

[project.optional-dependencies]
# The backend (control plane + worker) is deployed as a Docker image, not via pip. These are
# listed so the runtime requirements are documented in one place and so a `pip install -e
# .[server]` gives a working dev backend from source — they are never installed by a plain
# `pip install agentguard`.
server = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    "google-auth>=2.30",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    # Upper bounds are deliberate. Linters and type checkers gain new rules in minor
    # releases, so an unbounded range lets a tool release turn `main` red with no code
    # change — which is exactly what happened (mypy's str-unpack check). CI must fail
    # because of our commits, not their release schedule. Bump these in their own PR.
    "ruff>=0.6,<0.13",
    "mypy>=1.11,<1.19",
]

[tool.setuptools]
package-dir = { "" = "src" }

# The published wheel is the CLI only. `include` scopes discovery to `agentguard_cli*` so
# the `keel` backend and `worker` never ship to PyPI (that would publish server internals
# and force a ~100 MB backend dependency tree onto every `pip install agentguard`). The CLI
# is self-contained: it computes fingerprints via agentguard_cli.fingerprint (stdlib only)
# and talks to the API over httpx. The backend runs from source / the Docker image, where
# all of src/ is present, so it is unaffected by this filter. Enforced by tests/test_packaging.py.
[tool.setuptools.packages.find]
where = ["src"]
include = ["agentguard_cli*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
# S101: asserts are fine in tests
per-file-ignores = { "tests/*" = ["S101"] }

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
ignore_missing_imports = true

# redis-py responses are dynamically typed; relax strict call/return checks in the worker only.
[[tool.mypy.overrides]]
module = "worker.*"
disallow_untyped_calls = false
warn_return_any = false
