[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "keel-platform"
version = "0.0.1"
description = "AgentGuard / Keel — AI agent reliability platform (control plane + workers)"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "redis>=5.0",
    # Runtime deps of the Vertex provider (EVAL-02). httpx was previously dev-only, which
    # would have been an ImportError in the image the moment a real evaluation ran — the
    # lazy import in get_runner() hides it from the Docker smoke test.
    "httpx>=0.27",
    "google-auth>=2.30",
]

# The deployment-gate CLI now ships as its own lightweight distribution, `agentguard-dev`
# (see cli/pyproject.toml) — a stranger runs `pip install agentguard-dev` without pulling in
# the control-plane server stack. `make install` installs it editable for local dev/demo.

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
    # Upper bounds are deliberate. Linters and type checkers gain new rules in minor
    # releases, so an unbounded range lets a tool release turn `main` red with no code
    # change — which is exactly what happened (mypy's str-unpack check). CI must fail
    # because of our commits, not their release schedule. Bump these in their own PR.
    "ruff>=0.6,<0.13",
    "mypy>=1.11,<1.19",
]

[tool.setuptools]
package-dir = { "" = "src" }

# Discovered, not hand-listed. A hardcoded list silently omitted keel.evals: every test
# passed (they import from src/ via pythonpath) while the built wheel was missing the
# package, so only the Docker smoke test caught it. Discovery removes the failure mode.
[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
# cli/src carries the standalone CLI distribution (agentguard_cli + agentguard_core).
pythonpath = ["src", "cli/src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
src = ["src", "cli/src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S"]
# S101: asserts are fine in tests
per-file-ignores = { "tests/*" = ["S101"] }

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = ["src", "cli/src"]
ignore_missing_imports = true

# redis-py responses are dynamically typed; relax strict call/return checks in the worker only.
[[tool.mypy.overrides]]
module = "worker.*"
disallow_untyped_calls = false
warn_return_any = false
